# cheer-3

./: .current_task_id  .gitignore  AGENTS.md  BOOT_EVOLUTION.py  HEARTBEAT.md  IDENTITY.md  MEMORY.md  README.md  SOUL.md  SYSTEM_FRAMEWORK_PROPOSAL.md  TODO.md  TOOLS.md  USER.md  evoclaw-integration.json
.clawhub/: lock.json
.openclaw/: workspace-state.json
docs/: cheer-system-audit-2026-03-09.md  codex-evaluation-2026-03-07.md  current-system-evaluation-2026-03-09.md  current-system-mechanism-2026-03-11.md  file-governance-system-2026-03-11.md  file-management-and-db-catalog-2026-03-10.md  final-closure-tables-2026-03-10.md  full-system-audit-2026-03-07.md  implementation-rollout-plan-2026-03-10.md  mechanism-runtime-table-2026-03-10.md  memory-db-unified-schema-2026-03-12.md  memory-single-write-source-plan-2026-03-09.md  module-status-2026-03-08.json  root-file-governance-2026-03-10.md  system-evaluation-2026-03-07.md  system-issues-and-remediation-2026-03-12.md  system-user-manual-2026-03-10.md  test-codex.txt  week1-implementation-verification-2026-03-10.md  week2-implementation-verification-2026-03-10.md  week3-implementation-verification-2026-03-10.md  (+5 more)
skills/_candidate/DeepRecall/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
skills/_candidate/DeepRecall/docs/: anamnesis-architecture.md
skills/_candidate/DeepRecall/examples/: basic_recall.py
skills/_candidate/DeepRecall/tests/: test_deep_recall.py  test_memory_indexer.py  test_memory_scanner.py  test_model_pairs.py  test_provider_bridge.py
(+719 files in other folders)
